feat: file/bulk-text inscription
