# src/controller/child.inscribe.bulk.controller.ts
@@ -5,21 +5,32 @@ import {
   networks,
   Signer as BTCSigner,
   opcodes,
-  payments
+  crypto,
+  payments,
 } from "bitcoinjs-lib";
 import { Taptree } from "bitcoinjs-lib/src/types";
 import * as ecc from "tiny-secp256k1";
-import { multiSendUTXO } from "../utils/utxo/utxo.multiSend";
+import { singleSendUTXO } from "../utils/utxo/utxo.singleSend";
 import networkConfig from "../config/network.config";
 import { SeedWallet } from "../utils/wallet/SeedWallet";
 import { WIFWallet } from '../utils/wallet/WIFWallet';
-import { type PublicKey, type SecretKey } from "@cmdcode/crypto-utils";
-import { Address, Signer, Tap, Tx, TxTemplate } from "@cmdcode/tapscript";
-import { Buff } from "@cmdcode/buff-utils";
+import { getUtxos } from "../utils/mempool";
+import { ECPairFactory, ECPairAPI } from "ecpair";
 import { pushBTCpmt } from "../utils/mempool";
 import { WIF, SEED, TESTNET } from "../config/network.config";
 import { MAXIMUMFEERATE } from "../config/network.config";
+import { splitBuffer } from "../utils/buffer/splitBuffer";
+import { getInscriptionInfo } from "../utils/unisat.api";
+import cbor from 'cbor';
+
 initEccLib(ecc as any);
+const ECPair: ECPairAPI = ECPairFactory(ecc);
+
+interface IUtxo {
+  txid: string;
+  vout: number;
+  value: number;
+}
 
 const networkType: string = networkConfig.networkType;
 let wallet: any;
@@ -36,106 +47,88 @@ if (networkConfig.walletType == WIF) {
 
 const keyPair = wallet.ecPair;
 
-export const childInscribeBulkText = async (receiveAddress: string, contentArray: Array<string>, feeRate: number, padding: number): Promise<any> => {
-  let mimetype = 'text/plain';
-  const feeArray = contentArray.map((contentItem: string) => {
-    let bufferContent: any = Buffer.from(contentItem)
+export const childInscribeBulkText = async (parentId: string, mimetype: string, receiveAddress: string, contents: Array<string>, feeRate: number, padding: number, metadata: string, metaprotocol: string): Promise<any> => {
+  const contentsBufferArray = contents.map((content, index) => splitBuffer(Buffer.from(content, 'utf8'), 400))
 
-    const ordinalStacks = [
-      keyPair.publicKey.subarray(1, 33),
-      opcodes.OP_CHECKSIG,
+  //get Inscription UTXO Info
+  const inscriptionUtxoInfo = await getInscriptionInfo(parentId, TESTNET);
+  const inscriptionIdBuffer = Buffer.from(parentId, 'hex');
+  const inscriptionBuffer = inscriptionIdBuffer.reverse();
+  const metadataJson = {
+    'content': metadata
+  }
+  const metadataBuffer = cbor.encode(metadataJson);
+  const pointer = inscriptionUtxoInfo.value;
+
+  //TapScript array for child inscription
+  let childOrdinalStacks: any = [
+    toXOnly(keyPair.publicKey),
+    opcodes.OP_CHECKSIG,
+  ];
+  contentsBufferArray.forEach((contentBuffer, index) => {
+    let inscriptionItem = [
       opcodes.OP_FALSE,
       opcodes.OP_IF,
-      Buffer.from("ord"),
-      opcodes.OP_1,
-      Buffer.from(mimetype),
-      opcodes.OP_0,
-      bufferContent,
-      opcodes.OP_ENDIF,
+      Buffer.from("ord", "utf8"),
+      1,
+      1,
+      Buffer.from(mimetype, "utf8"),
+      1,
+      2,
+      Buffer.from((pointer + padding * index).toString(16).padStart(4, '0'), 'hex').reverse(),
+      1,
+      3,
+      inscriptionBuffer,
+      1,
+      5,
+      metadataBuffer,
+      1,
+      7,
+      Buffer.from(metaprotocol, "utf8"),
     ];
-    const ordinalScript = script.compile(ordinalStacks);
 
-    const scriptTree: Taptree = {
-      output: ordinalScript,
-    };
+    contentBuffer.forEach((item: Buffer) => {
+      inscriptionItem.push(opcodes.OP_0)
+      inscriptionItem.push(item)
+    })
 
-    const script_p2tr = payments.p2tr({
-      internalPubkey: toXOnly(keyPair.publicKey),
-      scriptTree,
-      network,
-    });
+    inscriptionItem.push(opcodes.OP_ENDIF)
+    childOrdinalStacks.push(...inscriptionItem)
+  })
 
-    const ordinlas_redeem = {
-      output: ordinalScript,
-      redeemVersion: 192,
-    };
+  const ordinalScript = script.compile(childOrdinalStacks);
 
-    const ordinals_p2tr = payments.p2tr({
-      internalPubkey: toXOnly(keyPair.publicKey),
-      scriptTree,
-      redeem: ordinlas_redeem,
-      network,
-    });
+  const scriptTree: Taptree = {
+    output: ordinalScript,
+  };
 
-    const redeemPsbt = new Psbt({ network });
-    redeemPsbt.addInput({
-      hash: 'e2aa2f0e1b49567e3c5e2f5985898657930e9f3ec1580b38429499e318c62b64',
-      index: 0,
-      witnessUtxo: { value: 10 ** 6, script: script_p2tr.output! },
-      tapLeafScript: [
-        {
-          leafVersion: ordinlas_redeem.redeemVersion,
-          script: ordinlas_redeem.output,
-          controlBlock: ordinals_p2tr.witness![ordinals_p2tr.witness!.length - 1],
-        },
-      ],
-    });
-    redeemPsbt.addOutput({
-      address: receiveAddress,
-      value: padding,
-    });
-    redeemPsbt.setMaximumFeeRate(MAXIMUMFEERATE);
-    const redeemFee = calculateTransactionFee(keyPair, redeemPsbt, feeRate);
-    return redeemFee + padding;
+  const ordinlas_redeem = {
+    output: ordinalScript,
+    redeemVersion: 192,
+  };
+
+  const ordinals_p2tr = payments.p2tr({
+    internalPubkey: toXOnly(keyPair.publicKey),
+    scriptTree,
+    redeem: ordinlas_redeem,
+    network,
   });
-  const response = await tapRootInscribeBulkText(Buff.encode(mimetype), receiveAddress, contentArray, feeRate, feeArray, padding);
+
+  //temporary psbt creating
+  let redeemFee: number = await redeemPsbtCalculateFee(contents.length, inscriptionUtxoInfo, ordinals_p2tr, ordinlas_redeem, feeRate, receiveAddress, padding);
+  redeemFee += padding * contents.length + inscriptionUtxoInfo.value
+
+  //real psbt creating
+  const response = await BulkTextChilldInscribe(contents.length, inscriptionUtxoInfo, ordinals_p2tr, ordinlas_redeem, feeRate, receiveAddress, padding, redeemFee);
   return response;
 }
-export const tapRootInscribeBulkText = async (mimetype: any, receiveAddress: string, contentArray: any, feeRate: number, feeArray: Array<number>, padding: number) => {
-  let tpubkeyArray: Array<string> = [];
-  let tapleafArray: Array<any> = [];
-  let scriptArray: Array<any> = [];
-  let cblockArray: Array<any> = [];
 
-  const addressArray = contentArray.map((contentItem: string) => {
-    const script = [
-      wallet.pubkey,
-      "OP_CHECKSIG",
-      "OP_0",
-      "OP_IF",
-      Buff.encode("ord"),
-      "01",
-      mimetype,
-      "OP_0",
-      Buff.encode(contentItem),
-      "OP_ENDIF",
-    ];
-    const tapleaf = Tap.encodeScript(script as any[]);
-    const [tpubkey, cblock] = Tap.getPubKey(wallet.pubkey as PublicKey, {
-      target: tapleaf,
-    });
+const BulkTextChilldInscribe = async (contentsLength: number, inscriptionUtxoInfo: IUtxo, ordinals_p2tr: any, ordinlas_redeem: any, feeRate: number, receiveAddress: string, padding: number, fee: number) => {
+  //tapscript address
+  const address = ordinals_p2tr.address ?? "";
 
-    tpubkeyArray.push(tpubkey);
-    tapleafArray.push(tapleaf);
-    scriptArray.push(script);
-    cblockArray.push(cblock);
-
-    const address = Address.p2tr.fromPubKey(tpubkey, networkConfig.networkType == TESTNET ? TESTNET : "main");
-
-    return address;
-  });
-
-  const response = await multiSendUTXO(addressArray, feeRate, feeArray);
+  //send utxo to taproot address
+  const response = await singleSendUTXO(address, feeRate, fee);
 
   if (response.isSuccess) {
     console.log(`Sent_UTXO_TxId => ${response.data}`)
@@ -143,53 +136,142 @@ export const tapRootInscribeBulkText = async (mimetype: any, receiveAddress: str
     return response;
   }
 
-  const txdataArray = addressArray.map((address: string, index: number) => {
-    const txdata = Tx.create({
-      vin: [
-        {
-          txid: response.data as string,
-          vout: index,
-          prevout: {
-            value: feeArray[index],
-            scriptPubKey: ["OP_1", tpubkeyArray[index]],
-          },
-        },
-      ],
-      vout: [
-        {
-          value: padding,
-          scriptPubKey: Address.toScriptPubKey(receiveAddress),
-        },
-      ],
-    });
-    return txdata;
+  const utxos: any = await getUtxos(address, networkType);
+  const sentUtxo = utxos.filter((item: { value: number; }) => item.value == fee)[0];
+
+  const psbt = new Psbt({ network });
+  psbt.addInput({
+    hash: inscriptionUtxoInfo.txid,
+    index: inscriptionUtxoInfo.vout,
+    witnessUtxo: {
+      value: inscriptionUtxoInfo.value,
+      script: wallet.output,
+    },
+    tapInternalKey: toXOnly(keyPair.publicKey),
+  });
+  psbt.addInput({
+    hash: sentUtxo.txid,
+    index: sentUtxo.vout,
+    witnessUtxo: { value: sentUtxo.value, script: ordinals_p2tr.output! },
+    tapInternalKey: toXOnly(keyPair.publicKey),
+    tapLeafScript: [
+      {
+        leafVersion: ordinlas_redeem.redeemVersion,
+        script: ordinlas_redeem.output,
+        controlBlock: ordinals_p2tr.witness![ordinals_p2tr.witness!.length - 1],
+      },
+    ],
+  });
+
+  psbt.addOutput({
+    address: receiveAddress, //Destination Address
+    value: inscriptionUtxoInfo.value,
+  });
+
+  for (let i = 0; i < contentsLength; i++) {
+    psbt.addOutput({
+      address: receiveAddress, //Destination Address
+      value: padding,
+    })
+  };
+
+  psbt.setMaximumFeeRate(MAXIMUMFEERATE);
+  const responseData = await signAndSend(keyPair, psbt);
+  console.log(`Inscription Tx: ${responseData.txid}`)
+  return responseData
+}
+
+async function signAndSend(
+  keypair: BTCSigner,
+  psbt: Psbt,
+) {
+  const signer = tweakSigner(keypair, { network })
+  psbt.signInput(0, signer);
+  psbt.signInput(1, keypair);
+  psbt.finalizeAllInputs()
+  const tx = psbt.extractTransaction();
+
+  const txid = await pushBTCpmt(tx.toHex(), TESTNET);
+
+  return { isSuccess: true, txid: txid }
+}
+
+function tweakSigner(signer: any, opts: any = {}) {
+  let privateKey = signer.privateKey;
+  if (!privateKey) {
+    console.log('Private key is required for tweaking signer!')
+  }
+  if (signer.publicKey[0] === 3) {
+    privateKey = ecc.privateNegate(privateKey);
+  }
+  const tweakedPrivateKey: any = ecc.privateAdd(privateKey, tapTweakHash(toXOnly(signer.publicKey), opts.tweakHash));
+  if (!tweakedPrivateKey) {
+    console.log('Invalid tweaked private key!')
+  }
+  return ECPair.fromPrivateKey(Buffer.from(tweakedPrivateKey), {
+    network: opts.network,
+  });
+}
+
+function tapTweakHash(pubKey: Buffer, h: Buffer | undefined): Buffer {
+  return crypto.taggedHash(
+    "TapTweak",
+    Buffer.concat(h ? [pubKey, h] : [pubKey])
+  );
+}
+
+const redeemPsbtCalculateFee = async (contentsLength: number, inscriptionUtxoInfo: IUtxo, ordinals_p2tr: any, ordinlas_redeem: any, feeRate: number, receiveAddress: string, padding: number): Promise<number> => {
+  const redeemPsbt = new Psbt({ network });
+  redeemPsbt.addInput({
+    hash: inscriptionUtxoInfo.txid,
+    index: inscriptionUtxoInfo.vout,
+    witnessUtxo: {
+      value: inscriptionUtxoInfo.value,
+      script: wallet.output,
+    },
+    tapInternalKey: toXOnly(keyPair.publicKey),
+  });
+  redeemPsbt.addInput({
+    hash: 'e2aa2f0e1b49567e3c5e2f5985898657930e9f3ec1580b38429499e318c62b64',
+    index: 0,
+    witnessUtxo: { value: 10 ** 6, script: ordinals_p2tr.output! },
+    tapInternalKey: toXOnly(keyPair.publicKey),
+    tapLeafScript: [
+      {
+        leafVersion: ordinlas_redeem.redeemVersion,
+        script: ordinlas_redeem.output,
+        controlBlock: ordinals_p2tr.witness![ordinals_p2tr.witness!.length - 1],
+      },
+    ],
+  });
+
+  redeemPsbt.addOutput({
+    address: receiveAddress, //Destination Address
+    value: inscriptionUtxoInfo.value,
   })
 
-  let inscriptionTxArray: Array<any> = [];
+  for (let i = 0; i < contentsLength; i++) {
+    redeemPsbt.addOutput({
+      address: receiveAddress, //Destination Address
+      value: padding,
+    })
+  };
 
-  for (let i = 0; i < txdataArray.length; i++) {
-    const sig = Signer.taproot.sign(wallet.seckey as SecretKey, txdataArray[i], 0, {
-      extension: tapleafArray[i],
-    });
-    txdataArray[i].vin[0].witness = [sig, scriptArray[i] as any[], cblockArray[i]];
+  redeemPsbt.setMaximumFeeRate(MAXIMUMFEERATE);
+  const redeemFee = calculateTransactionFee(keyPair, redeemPsbt, feeRate);
 
-    const rawTx = Tx.encode(txdataArray[i]).hex;
-    const tx = await pushBTCpmt(rawTx, networkType);
+  return redeemFee;
 
-    inscriptionTxArray.push(tx);
-  }
+}
 
-  return { isSuccess: true, data: inscriptionTxArray }
-};
-
-export function calculateTransactionFee(
+function calculateTransactionFee(
   keyPair: BTCSigner,
   psbt: Psbt,
   feeRate: number
 ): number {
-  for (let i = 0; i < psbt.inputCount; i++) {
-    psbt.signInput(0, keyPair);
-  }
+  const signer = tweakSigner(keyPair, { network })
+  psbt.signInput(0, signer);
+  psbt.signInput(1, keyPair);
   psbt.finalizeAllInputs();
   return psbt.extractTransaction().virtualSize() * feeRate;
 }
