# src/routes/child.inscription.route.ts
@@ -35,8 +35,8 @@ ChildInscriptionRouter.post(
                     const content = req.body.content;
                     const feeRate = req.body.feeRate;
                     const padding = req.body.padding;
-                    const metadata = req.body.metadata? req.body.metadata : '';
-                    const metaprotocol = req.body.metaprotocol? req.body.metaprotocol : '';
+                    const metadata = req.body.metadata ? req.body.metadata : '';
+                    const metaprotocol = req.body.metaprotocol ? req.body.metaprotocol : '';
 
                     const response = await childInscribe(
                         parentId,
@@ -63,41 +63,49 @@ ChildInscriptionRouter.post(
     }
 );
 
-// @route    POST api/inscribe/bulk-text
+// @route    POST api/child-inscribe/bulk-text
 // @desc     Text Inscription
 // @access   Private
+
 ChildInscriptionRouter.post(
     "/bulk-text",
     async (req: Request, res: Response) => {
         try {
-            if (!(req.body.receiveAddress && req.body.contents && req.body.feeRate && req.body.padding)) {
+            if (!(req.body.receiveAddress && req.body.contents && req.body.feeRate && req.body.padding && req.body.parentId)) {
                 let error = [];
+                if (!req.body.parentId) { error.push({ parentId: 'ParentId is required' }) }
                 if (!req.body.receiveAddress) { error.push({ receiveAddress: 'Receive Address is required' }) }
-                if (!req.body.contents) { error.push({ content: 'Content is required' }) }
+                if (!req.body.contents) { error.push({ contents: 'Content is required' }) }
                 if (!req.body.feeRate) { error.push({ feeRate: 'FeeRate is required' }) }
                 if (!req.body.padding) { error.push({ padding: 'Padding is required' }) }
                 res.status(400).send({ error: { type: 0, data: error } })
             } else {
-
                 if (!isValidBitcoinAddress(req.body.receiveAddress)) {
                     res.status(400).send({ error: { type: 2, data: 'This address is not valid address.' } })
                 } else {
-
+                    const parentId = req.body.parentId;
                     const receiveAddress = req.body.receiveAddress;
-                    const content: Array<string> = JSON.parse(req.body.contents).data;
+                    const contents = JSON.parse(req.body.contents).data;
                     const feeRate = req.body.feeRate;
                     const padding = req.body.padding;
-                    // const response = await inscribeBulkText(
-                    //     receiveAddress,
-                    //     content,
-                    //     feeRate,
-                    //     padding
-                    // );
-                    // if (response.isSuccess) {
-                    //     res.status(200).send({ tx: response.data })
-                    // } else {
-                    //     res.status(400).send({ error: { type: 1, data: response.data } })
-                    // }
+                    const metadata = req.body.metadata ? req.body.metadata : '';
+                    const metaprotocol = req.body.metaprotocol ? req.body.metaprotocol : '';
+
+                    const response = await childInscribeBulkText(
+                        parentId,
+                        'text/plain',
+                        receiveAddress,
+                        contents,
+                        feeRate,
+                        padding,
+                        metadata,
+                        metaprotocol
+                    );
+                    if (response.isSuccess) {
+                        res.status(200).send({ tx: response.txid })
+                    } else {
+                        res.status(400).send({ error: { type: 1, data: response.data } })
+                    }
                 }
             }
         } catch (error: any) {
@@ -117,39 +125,44 @@ ChildInscriptionRouter.post(
             if (req.files === null) {
                 return res.status(400).json({ msg: 'No file uploaded' });
             }
-            if (!(req.body.receiveAddress && req.body.feeRate && req.body.padding)) {
+            if (!(req.body.receiveAddress && req.body.feeRate && req.body.padding && req.body.parentId)) {
                 let error = [];
+                if (!req.body.parentId) { error.push({ parentId: 'ParentId is required' }) }
                 if (!req.body.receiveAddress) { error.push({ receiveAddress: 'Receive Address is required' }) }
                 if (!req.body.feeRate) { error.push({ feeRate: 'FeeRate is required' }) }
                 if (!req.body.padding) { error.push({ padding: 'Padding is required' }) }
                 res.status(400).send({ error: { type: 0, data: error } })
             } else {
-
                 if (!isValidBitcoinAddress(req.body.receiveAddress)) {
                     res.status(400).send({ error: { type: 2, data: 'This address is not valid address.' } })
                 } else {
+                    const parentId = req.body.parentId;
                     const receiveAddress = req.body.receiveAddress;
                     const feeRate: number = +req.body.feeRate;
                     const padding: number = +req.body.padding;
+                    const metadata = req.body.metadata ? req.body.metadata : '';
+                    const metaprotocol = req.body.metaprotocol ? req.body.metaprotocol : '';
                     const file: IFile = req.files?.file as IFile;
                     const mimetype: string = file?.mimetype;
                     const content: Buffer = file?.data;
 
-                    // const response = await inscribe(
-                    //     'file',
-                    //     mimetype,
-                    //     receiveAddress,
-                    //     content,
-                    //     feeRate,
-                    //     padding
-                    // );
-                    // if (response.isSuccess) {
-                    //     res.status(200).send({ tx: response.data })
-                    // } else {
-                    //     res.status(400).send({ error: { type: 1, data: response.data } })
-                    // }
+                    const response = await childInscribe(
+                        parentId,
+                        'file',
+                        mimetype,
+                        receiveAddress,
+                        content,
+                        feeRate,
+                        padding,
+                        metadata,
+                        metaprotocol
+                    );
+                    if (response.isSuccess) {
+                        res.status(200).send({ tx: response.txid })
+                    } else {
+                        res.status(400).send({ error: { type: 1, data: response.data } })
+                    }
                 }
-
             }
         } catch (error: any) {
             console.error(error);
